--- a/css/common.css
+++ b/css/common.css
@@ -3,33 +3,40 @@ body {
     background-color: #f7f7f7;
 }
 header {
-    width: 1200px;
+    width: 100%;
     height: 100px;
+    background-color: #28a6cc;
+}
+header div {
+    width: 1200px;
     margin: 0 auto 0 auto;
 }
-header h1 {
+header div h1 {
     height: 60px;
     line-height: 60px;
     color: #22454f;
-    background-color: #28a6cc;
     margin: 0;
     padding: 0 0 0 10px;
 }
-header ul {
+header nav {
+    width: 100%;
+    background-color: #394548;
+}
+header nav ul {
     width: 1200px;
     height: 40px;
-    margin: 0;
+    margin: 0 auto 0 auto;
     padding: 0;
+    background-color: #394548;
 }
-header ul li {
+header nav ul li {
     float: left;
-    width: 300px;
+    width: 240px;
     height: 40px;
     line-height: 40px;
     text-align: center;
     list-style:none;
     color: #62b4cc;
-    background-color: #394548;
 }
 
 footer {
