--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 #wrapper #info {
-    float: left;
+    float: right;
     width: 800px;
     height: 300px;
     margin: 20px 0 30px 30px;
@@ -23,7 +23,7 @@
     line-height: 50px;
     margin: 0;
     padding: 0 0 0 10px;
-    color: #0b303b;
+    color: #92e5fe;
     background-color: #28a6cc;
 }
 #wrapper #info div {
@@ -38,7 +38,9 @@
 }
 
 #wrapper #category {
-    float: right;
+    float: left;
+    position: relative;
+    /*top: 50px;*/
     width: 150px;
     margin: 20px 100px 30px 0;
     border: 1px solid #408ca3;
