--- a/css/common.css
+++ b/css/common.css
@@ -42,6 +42,9 @@ header nav ul li {
 footer {
     width: 1200px;
     height: 50px;
+    line-height: 50px;
     margin: 0 auto 0 auto;
+    text-align: center;
     background-color: #0b303b;
+    color: #fff;
 }
