--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,19 @@
     width: 1200px;
     height: 400px;
 }
-
+#wrapper .box {
+    width: 200px;
+    height: 200px;
+    background-color: #92e5fe;
+    margin: 30px 50px 30px 50px;
+    float: left;
+    padding: 0px;
+}
 #wrapper #info {
     float: right;
     width: 800px;
     height: 300px;
-    margin: 20px 0 30px 30px;
+    margin: 20px 50px 30px 30px;
 }
 #wrapper #info h2 {
     width: 790px;
@@ -42,7 +49,7 @@
     position: relative;
     /*top: 50px;*/
     width: 150px;
-    margin: 20px 100px 30px 0;
+    margin: 20px 50px 30px 50px;
     border: 1px solid #408ca3;
 }
 #wrapper #category li {
@@ -58,13 +65,17 @@
     right: 30px;
     width: 50px;
     height: 50px;
-    background-color: #030304;
+    background-color: #9288fe;
+    border-radius: 40%;
 }
 #wrapper #page-top p {
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    margin: 0;
+    position: fixed;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    margin: 4px;
     color: #92e5fe;
+    background-color: #000;
     text-align: center;
+    border-radius: 40%;
 }
