--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@ body {
 header {
     width: 100%;
     height: 100px;
-    background-color: #28a6cc;
+    background-color: #0A2A0A;
 }
 header div {
     width: 1200px;
@@ -19,11 +19,11 @@ header div h1 {
     padding: 0 0 0 10px;
 }
 header div h1 a:link {
-    color: #000000;
+    color: #D8F6CE;
     text-decoration:none;
 }
 header div h1 a:visited {
-    color: #000000;
+    color: #D8F6CE;
     text-decoration:none;
 }
 header div h1 a:hover {
@@ -31,7 +31,7 @@ header div h1 a:hover {
     text-decoration:none;
 }
 header div h1 a:active {
-    color: #000000;
+    color: #D8F6CE;
     text-decoration:none;
 }
 header nav {
@@ -47,19 +47,20 @@ header nav ul {
 }
 header nav ul li {
     float: left;
-    width: 240px;
+    width: 238px;
     height: 40px;
     line-height: 40px;
     text-align: center;
     list-style:none;
-    color: #62b4cc;
+    color: #088A08;
+    border-color: #fff;
 }
 header nav ul li a:link {
-    color: #62b4cc;
+    color: #088A08;
     text-decoration:none;
 }
 header nav ul li a:visited {
-    color: #62b4cc;
+    color: #088A08;
     text-decoration:none;
 }
 header nav ul li a:hover {
@@ -67,7 +68,7 @@ header nav ul li a:hover {
     text-decoration:none;
 }
 header nav ul li a:active {
-    color: #62b4cc;
+    color: #088A08;
     text-decoration:none;
 }
 
@@ -98,6 +99,6 @@ footer {
     line-height: 50px;
     margin: 0 auto 0 auto;
     text-align: center;
-    background-color: #0b303b;
+    background-color: #0A2A0A;
     color: #fff;
 }
