--- a/css/common.css
+++ b/css/common.css
@@ -78,7 +78,7 @@ header nav ul li a:active {
     right: 30px;
     width: 50px;
     height: 50px;
-    background-color: #9288fe;
+    background-color: #FF0040;
     border-radius: 40%;
 }
 #wrapper #page-top p {
